<resources>
    <string name="app_name">Pre-H assistant</string>
    <string name="terminazione">Termina Pre-H</string>
    <string name="centralizzazione">CENTRALIZZAZIONE</string>
    <string name="mezzo">Mezzo</string>
    <string name="medico">Medico</string>
    <string name="conferma">Conferma</string>
    <string name="storico">Storico</string>
    <string name="dett_missione">Dettagli Missione</string>
    <string name="new_pc_car">New PC Car</string>
    <string name="farmaci">Farmaci</string>
    <string name="infusioni">Infusioni</string>
    <string name="mannitolo">MANNITOLO 10%</string>
    <string name="soluzione_ipertonica">SOLUZIONE IPERTONICA NaCl 3%</string>
    <string name="cristalloidi">CRISTALLOIDI</string>
    <string name="fibrinogeno">FIBRINOGENO</string>
    <string name="emazie_concentrate">EMAZIE CONCENTRATE</string>
    <string name="generici">Generici</string>
    <string name="succinilcolina">SUCCINILCOLINA</string>
    <string name="midazolam">MIDAZOLAM</string>
    <string name="fentanil">FENTANIL</string>
    <string name="ketamina">KETAMINA</string>
    <string name="curaro">CURARO</string>
    <string name="acido_tranexamico">ACIDO TRANEXAMICO</string>
    <string name="manovre">Manovre</string>
    <string name="sonda_vescicale">Sonda Vescicale</string>
    <string name="sonda_gastrica">Sonda Gastrica</string>
    <string name="cardioversione_elettrica_sincronizzata">Cardioversione Elettrica Sincronizzata</string>
    <string name="immobilizzazione">Immobilizzazione</string>
    <string name="collare_cervicale">Collare Cervicale</string>
    <string name="pacing_transcutaneo">Pacing Transcutaneo</string>
    <string name="frequenza_di_cattura">Frequenza di cattura</string>
    <string name="frequenza_cattura_suggerimento_valori">60 &#45; 120</string>
    <string name="amperaggio">Amperaggio</string>
    <string name="amperaggio_suggerimento_valori">10 &#45; 200</string>
    <string name="conferma_pacing_transcutaneo">CONFERMA PACING TRANSCUTANEO</string>
    <string name="trattamenti">Trattamenti</string>
    <string name="rianimazione_cardio_polmonare">Rianimazione Cardio-Polmonare</string>
    <string name="andrenalina_1mg">Adrenalina 1mg</string>
    <string name="esegui_shock">Esegui Shock</string>
    <string name="inizio_rianimazione">Inizio Rianimazione</string>
    <string name="termina_rianimazione">Termina Rianimazione</string>
    <string name="vie_aeree">Vie Aeree</string>
    <string name="sublussazione_mandibola">Sublussazione Mandibola</string>
    <string name="guedel">Guedel</string>
    <string name="crico_tirotomia">Crico-Tirotomia</string>
    <string name="tubo_tracheale">Tubo Tracheale</string>
    <string name="respiro">Respiro</string>
    <string name="ossigenoterapia_i_min">OssigenoTerapia (I/min)</string>
    <string name="ambu">Ambu</string>
    <string name="mini_toracotomia">Mini Toracotomia</string>
    <string name="ippv">IPPV</string>
    <string name="vt">VT</string>
    <string name="vt_suggerimento_valori">100 &#45; 1000</string>
    <string name="fr">FR</string>
    <string name="fr_suggerimento_valori">8 &#45; 35</string>
    <string name="peep">PEEP</string>
    <string name="peep_default">45</string>
    <string name="frazione_inspiratoria_ossigeno">Frazione inspiratoria ossigeno (FiO2)</string>
    <string name="frazione_inspiratoria_ossigeno_default">35</string>
    <string name="circolo">Circolo</string>
    <string name="calibro">Calibro</string>
    <string name="tipologia">Tipologia</string>
    <string name="gauge">Gauge</string>
    <string name="french">French</string>
    <string name="size">Size</string>
    <string name="periferica">Periferica</string>
    <string name="centrale">Centrale</string>
    <string name="intraossea">Intraossea</string>
    <string name="emostasi">Emostasi</string>
    <string name="pelvic_binder">Pelvic Binder</string>
    <string name="tourniquet">Tourniquet</string>
    <string name="inizia_tourniquet">Inizia Tourniquet</string>
    <string name="termina_tourniquet">Termina Tourniquet</string>
    <string name="reboa">Reboa</string>
    <string name="inizia_reboa_zona_1">Inizia Reboa Zona 1</string>
    <string name="termina_reboa_zona_1">Termina Reboa Zona 1</string>
    <string name="inizia_reboa_zona_3">Inizia Reboa Zona 3</string>
    <string name="termina_reboa_zona_3">Termina Reboa Zona 3</string>
    <string name="neuroprotezione">Neuroprotezione</string>
    <string name="protezione_termica">Protezione Termica</string>
    <string name="starting_timer">00:00</string>
    <string name="complicanze">Complicanze</string>
    <string name="deterioramento_stato_di_coscenza">Deterioramento stato di coscenza</string>
    <string name="anisocoria_midriasi">Anisocoria / Midriasi</string>
    <string name="insufficienza_respiratoria">Insufficienza respiratoria</string>
    <string name="shock_cardiocircolatorio">Shock cardiocircolatorio</string>
    <string name="atterraggio_in_itinere_per_manovra_terapeutica">Atterraggio in itinere per manovra terapeutica
    </string>
    <string name="decesso">Decesso:</string>
    <string name="in_itinere">In Itinere</string>
    <string name="all_arrivo_in_ps">All\'arrivo in PS</string>
    <string name="new_pc_car_text">New PC-Car</string>
    <string name="partenza_dell_equipaggio">Partenza dell\'equipaggio</string>
    <string name="arrivo_sul_luogo_dell_incidente">Arrivo sul luogo dell\'incidente</string>
    <string name="partenza_dal_luogo_dell_incidente">Partenza dal luogo dell\'incidente</string>
    <string name="atterraggio_in_eliporto">Atterraggio in eliporto</string>
    <string name="acquisizione_posizione">Acquisizione posizione</string>
    <string name="sovrascrivi_indirizzo">Sovrascrivi indirizzo</string>
    <string name="codice_di_rientro">Codice di rientro</string>
    <string name="ospedale_di_arrivo">Ospedale di arrivo</string>
    <string name="mezzo_di_trasporto">Mezzo di trasporto</string>
    <string name="ambulanza">Ambulanza</string>
    <string name="elicottero">Elicottero</string>
    <string name="medico_accompagna">Medico accompagna</string>
    <string name="inserimento_luogo_e_orario">Inserimento luogo</string>
    <string name="luogo">Luogo</string>
    <string name="ora">Ora</string>
    <string name="tipo">Tipo</string>
    <string name="parametri_vitali">Parametri Vitali</string>
    <string name="pervie">Pervie</string>
    <string name="non_pervie">Non pervie</string>
    <string name="frequenza_respiratoria">Frequenza Respiratoria</string>
    <string name="saturazione_periferica">Saturazione Periferica O2</string>
    <string name="pressione_arteriosa_sistolica">Pressione arteriosa sistolica</string>
    <string name="pressione_arteriosa_sistolica_valori_suggeriti">0 &#45; 250</string>
    <string name="frequenza_cardiaca">Frequenza cardiaca</string>
    <string name="frequenza_cardiaca_valori_suggerimento">0 &#45; 300</string>
    <string name="ritmico">Ritmico</string>
    <string name="aritmico">Aritmico</string>
    <string name="tempo_riempimento_capillare">Tempo riempimento capillare</string>
    <string name="normale">Normale</string>
    <string name="aumentato">Aumentato</string>
    <string name="nullo">Nullo</string>
    <string name="colorito_cute_mucose">Colorito cute-mucose</string>
    <string name="pallido">Pallido</string>
    <string name="cianotico">Cianotico</string>
    <string name="GCS_15">GCS = 15</string>
    <string name="apertura_occhi">Apertura Occhi</string>
    <string name="risposta_verbale">Risposta Verbale</string>
    <string name="risposta_motoria">Risposta Motoria</string>
    <string name="pupille">Pupille</string>
    <string name="sx">SX</string>
    <string name="dx">DX</string>
    <string name="minithoracotomySx">Minitoracotomia SX</string>
    <string name="minithoracotomyDx">Minitoracotomia DX</string>
    <string name="miosi">Miosi</string>
    <string name="midriasi">Midriasi</string>
    <string name="fotoreagente">Fotoreagente</string>
    <string name="temperatura_corporea">Temperatura corporea</string>
    <string name="temperatura_default">37.0</string>
    <string name="sipa">SIPA = 0</string>
    <string name="ma">mA</string>
    <string name="bpm">bpm</string>
    <string name="mmHg">mmHg</string>
    <string name="percent">%</string>
    <string name="atti_min">atti/min</string>
    <string name="degrees">°C</string>
    <string name="milliliters">ml</string>
    <string name="milligrams">mg</string>
    <string name="micrograms">ug</string>
    <string name="stato_paziente">Stato Paziente</string>
    <string name="penetrante">Penetrante</string>
    <string name="tetraparesi">tetraparesi</string>
    <string name="paraparesi">paraparesi</string>
    <string name="parestesia">parestesia</string>
    <string name="negativo">negativo</string>
    <string name="bacino_instabile_deformato">Bacino instabile / deformato</string>
    <string name="amputazione_subamputazione">Amputazione / subamputazione</string>
    <string name="casco_cintura">Casco / Cintura</string>
    <string name="otorragia">otorragia</string>
    <string name="volet_costale_deformit_torace">Volet costale /deformità torace</string>
    <string name="tachipnea_dispnea">Tachipnea / dispnea</string>
    <string name="emorragia_esterna_in_atto">Emorragia esterna in atto</string>
    <string name="chiuso">Chiuso</string>
    <string name="positivo">positivo</string>
    <string name="vie_aeree_non_pervie">Vie aeree non pervie</string>
    <string name="infossata">infossata</string>
    <string name="shock_index_o_shock_index_pedriatic_age_adjusted">Shock Index o Shock Index Pedriatic Age-Adjusted
    </string>
    <string name="criterio_anatomico">Criterio Anatomico</string>
    <string name="trauma_schiacciamento_tronco">Trauma da schiacciamento del tronco</string>
    <string name="amputazione_scuoiamento_arto">Amputazione/Scuoiamento di arto prossimale a polso o caviglia</string>
    <string name="ferita_penetrante">Ferita penetrante di testa, collo, tronco o radice di un arto</string>
    <string name="frattura_cranica_io">Frattura canica infossata/otorragia</string>
    <string name="volet_costale_id">Volet costale o instabilità/deformità della parete toracica</string>
    <string name="ustione">Ustione di 2° e/o 3° grado, >30\% superfice corporea ustionata, volto/mani/piedi/genitali</string>
    <string name="sospetta_lesione_verbale">Sospetta lesione vertebrale</string>
    <string name="default_shock_index">0.0</string>
    <string name="criterio_dinamico">Criterio Dinamico</string>
    <string name="giudizio_clinico">Giudizio Clinico</string>
    <string name="criterio_fisiologico">Criterio Fisiologico</string>
    <string name="frequenza_respiratoria_10_atti_min"><![CDATA[Frequenza respiratoria < 10 atti/min]]></string>
    <string name="frequenza_respiratoria_29_atti_min"><![CDATA[Frequenza respiratoria > 29 atti/min]]></string>
    <string name="pressione_arteriosa_sistolica_90_mmhg"><![CDATA[Pressione arteriosa sistolica < 90 mmHg]]></string>
    <string name="necessit_supporto_ventilatorio">Necessità supporto ventilatorio</string>
    <string name="gcs_14"><![CDATA[GCS < 14]]></string>
    <string name="ipertensione_arteriosa_sintomatica">Ipertensione arteriosa sintomatica</string>
    <string name="ecofast">Ecofast</string>
    <string name="frattura_cranica">Frattura cranica</string>
    <string name="tipo_trauma">Tipo Trauma</string>
    <string name="info_evento">Info Evento</string>
    <string name="codice_invio">Codice invio</string>
    <string name="dinamica">Dinamica</string>
    <string name="secondario">Secondario</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="mezzi_coinvolti">Missioni attive su evento</string>
    <string name="numero_pazienti">Numero pazienti</string>
    <string name="emptyText">-------------</string>
    <string name="note">Note</string>
</resources>