<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".home.ComplicationsFragment"
                                                   android:id="@+id/frameLayout3">
    <Switch
            android:text="@string/arresto_cardio_circolatorio"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:id="@+id/arrest_switch"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="129dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Switch
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:id="@+id/consciousness_deteriorarion_switch"
            android:text="@string/deterioramento_stato_di_coscenza"
            android:textSize="17dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/arrest_switch"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="129dp"/>
    <Switch
            android:text="@string/anisocoria_midriasi"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/aniso_midriasi_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="129dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/consciousness_deteriorarion_switch"/>
    <Switch
            android:text="@string/insufficienza_respiratoria"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/insufResp_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="129dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/aniso_midriasi_switch"/>
    <Switch
            android:text="@string/shock_cardiocircolatorio"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/shockCard_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="129dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/insufResp_switch"/>
    <Switch
            android:text="@string/atterraggio_in_itinere_per_manovra_terapeutica"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/atterraggio_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="129dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/shockCard_switch"/>
    <TextView
            android:text="@string/decesso"
            android:layout_width="89dp"
            android:textSize="19sp"
            android:layout_height="39dp"
            android:id="@+id/textView2" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/atterraggio_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="74dp"/>
    <Button
            android:text="@string/in_itinere"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/button" android:layout_marginStart="62dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/atterraggio_switch"
            app:layout_constraintEnd_toStartOf="@+id/button3"/>
    <Button
            android:text="@string/all_arrivo_in_ps"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/button3" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/atterraggio_switch"
            app:layout_constraintStart_toEndOf="@+id/button"
            android:backgroundTint="@color/colorPrimaryDark" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="75dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>