<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:id="@+id/pc_car"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/new_pc_car_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            style="@style/DialogTitleTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginStart="126dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="127dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/partenza_dell_equipaggio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/partenzaEquip_button"
            android:layout_marginTop="144dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="127dp"/>
    <Button
            android:text="@string/arrivo_sul_luogo_dell_incidente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/arrivoLuogo_button"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/partenzaEquip_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="127dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp"
    />
    <Button
            android:text="@string/partenza_dal_luogo_dell_incidente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/partenzaLuogo_button"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/arrivoLuogo_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="127dp"/>
    <Button
            android:text="@string/atterraggio_in_eliporto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/atterraggio_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="127dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/partenzaLuogo_button"
    />
    <ImageButton
            android:layout_width="105dp"
            android:layout_height="106dp"
            app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/closeAndSave_button"
            android:backgroundTint="@color/common_google_signin_btn_tint"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>