<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   style="@style/BackgroundFragmentStyle"
                                                   tools:context=".dialog.PacingDialogFragment"
                                                   android:id="@+id/frameLayout1">
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_24dp"
            android:id="@+id/pacing_dialog_image_button"
            android:backgroundTint="@color/common_google_signin_btn_tint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/pacing_transcutaneo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DialogTitleTextStyle"
            android:id="@+id/textView"
            android:layout_marginTop="@dimen/verticalMargin"
            android:layout_marginBottom="@dimen/verticalMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/amperage_edit_text"
                android:layout_marginEnd="@dimen/horizontalMargin"
                app:layout_constraintTop_toTopOf="@+id/textView19"
                app:layout_constraintBottom_toBottomOf="@+id/textView19"
                app:layout_constraintStart_toStartOf="@+id/guideline32"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
        <TextView
                android:text="@string/frequenza_di_cattura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textView19"
                app:layout_constraintStart_toEndOf="@id/guideline39"/>
        <TextView
                android:text="@string/amperaggio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:layout_constraintBottom_toTopOf="@id/pacing_button"
                app:layout_constraintStart_toEndOf="@id/guideline39"/>
        <TextView
                android:text="@string/bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                app:layout_constraintTop_toTopOf="@id/capture_frequency_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/capture_frequency_edit_text"
                app:layout_constraintStart_toEndOf="@id/guideline42"/>
        <TextView
                android:text="@string/ma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/amperage_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/amperage_edit_text"
                app:layout_constraintStart_toEndOf="@id/guideline42"/>
    <Button
            android:text="@string/conferma_pacing_transcutaneo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/buttonVerticalPadding"
            android:paddingHorizontal="@dimen/buttonHorizontalPadding"
            android:id="@+id/pacing_button"
            app:layout_constraintWidth_percent="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amperage_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/guideline10"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/capture_frequency_edit_text"
                android:layout_marginEnd="@dimen/horizontalMargin"
                app:layout_constraintTop_toTopOf="@id/textView18"
                app:layout_constraintBottom_toBottomOf="@id/textView18"
                app:layout_constraintStart_toStartOf="@+id/guideline32"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.45"
                android:id="@+id/guideline32"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.1"
                android:id="@+id/guideline39"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.85"
                android:id="@+id/guideline42"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.6"
            android:id="@+id/guideline10"/>
</androidx.constraintlayout.widget.ConstraintLayout>